--- a/src/Components/LandingPage/landing.css
+++ b/src/Components/LandingPage/landing.css
@@ -1,64 +1,40 @@
-/* landingPage.css */
-
-body,
-html {
+body, html {
   margin: 0;
   padding: 0;
+  background-color: #f5f5f5; 
   height: 100%;
 }
 
-.landing-page {
-  position: relative;
-  height: 100vh;
-  overflow: hidden;
+.Landing {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 40vh; 
 }
 
-.background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  /* background-image: url('path/to/your/background-image.jpg');  */
-  background-size: cover;
-  background-position: center;
-  filter: brightness(0.7); /* Adjust the brightness as needed */
-}
-
-.content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.Content {
   text-align: center;
-  color: #fff;
+  width:90%;
 }
 
-h1 {
-  margin: 0;
+.Buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 10px; 
+  width:110%;
 }
 
-.buttons {
-  margin-top: 20px;
-}
-
-.buttons a {
-  margin: 0 10px;
-  text-decoration: none;
-  background-color:blac
-}
-
-.buttons button {
-  padding: 10px 20px;
+button {
+  padding: 10px;
   font-size: 16px;
-  background-color: #3498db;
-  color: #fff;
+  background-color: white; 
   border: none;
-  border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  color:black;
 }
 
-.buttons button:hover {
-  background-color: #2980b9;
+button:hover {
+  background-color: green;
+  color: white; 
 }
