--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -1,31 +1,45 @@
-/* register.css */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Circular', sans-serif; /* You can change the font family */
+  background-color: #ecf0f1; /* Set your desired background color */
+}
 
-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 300px;
-    margin: 20px auto;
-  }
-  
-  input {
-    margin: 10px 0;
-    padding: 8px;
-  }
-  
-  button {
-    background-color: #3498db;
-    color: #fff;
-    padding: 10px;
-    cursor: pointer;
-  }
-  
-  button:disabled {
-    background-color: #bdc3c7;
-    cursor: not-allowed;
-  }
-  
-  span {
-    color: red;
-    margin-top: 5px;
-  }
-  
+
+#login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center horizontally */
+  max-width: 300px;
+  margin: 20px auto;
+}
+
+input {
+  margin: 10px 0;
+  padding: 8px;
+  width: 100%;
+}
+
+button {
+  background-color: #3498db;
+  color: #fff;
+  padding: 20px;
+  cursor: pointer;
+  margin: 10px;
+  width: 40%;
+}
+
+button:disabled {
+  background-color: #bdc3c7;
+  cursor: not-allowed;
+}
+
+span {
+  color: red;
+  margin-top: 5px;
+  width: 100%;
+}
+
+#login-container{
+  width: 90%;
+}
