--- a/src/Components/Register/register.css
+++ b/src/Components/Register/register.css
@@ -11,12 +11,12 @@ body {
     height: 100vh;
 }
 
-form {
+.Container {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width: 80%;
 }
 
 label {
@@ -37,10 +37,12 @@ input {
 button {
     background-color: #00A699;
     color: #fff;
-    padding: 10px;
+    padding: 20px;
+    margin:10px;
     border: none;
     border-radius: 8px;
     cursor: pointer;
+    width:40%;
 }
 
 button:disabled {
@@ -49,8 +51,10 @@ button:disabled {
 }
 
 span {
-    color: red;
+    color: blue;
     font-size: 14px;
     margin-bottom: 10px;
     display: block;
 }
+
+
