--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -1,15 +1,15 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Circular', sans-serif; /* You can change the font family */
-  background-color: #ecf0f1; /* Set your desired background color */
+  font-family: 'Circular', sans-serif; 
+  background-color: #ecf0f1; 
 }
 
 
 #login-form {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center horizontally */
+  align-items: center; 
   max-width: 300px;
   margin: 20px auto;
 }
