--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+#root {
+  /* margin: 0; */
+  height:100vh;
+  width:100vw;
+}
+
 body {
-  margin: 0;
+  /* margin: 0; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
